import "QueryInfo.proto";
import "TagInfo.proto";
import "NamedTagInfo.proto";
import "ObjectQueryInfo.proto";

option java_package = "com.alachisoft.tayzgrid.common.protobuf";
option java_outer_classname="AddCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message AddCommand {	
	optional bytes key = 1;
	optional int64 requestId = 2;
	optional sint32 updateCallbackId = 3;
	optional sint32 removeCallbackId = 4;
	optional sint32 datasourceItemAddedCallbackId = 5;
	optional bool isAsync = 6;
	optional int32 priority = 7;
	optional int64 absExpiration = 8;
	optional int64 sldExpiration = 9;
	optional bool isResync = 10;
	optional string group = 11;
	optional string subGroup = 12;
	optional int32 flag = 13;
	optional string providerName = 14;
	optional string resyncProviderName = 15;
	optional QueryInfo queryInfo = 16;
	optional TagInfo tagInfo = 17;
	repeated bytes data = 18;
	optional NamedTagInfo namedTagInfo = 19;
	optional ObjectQueryInfo objectQueryInfo = 20;		
	repeated bytes objectQueryInfoEncrypted = 21;
	optional sint32 updateDataFilter = 22 [default = -1];
	optional sint32 removeDataFilter = 23 [default = -1];	
}